@@ -4,8 +4,13 @@
      [regress/Makefile regress/key-options.sh]
      Add regress test for key options.  ok djm@
    - dtucker@cvs.openbsd.org 2008/06/11 23:11:40
-     [Makefile]
+     [regress/Makefile]
      Don't run cipher-speed test by default; mistakenly enabled by me
+   - djm@cvs.openbsd.org 2008/06/28 13:57:25
+     [regress/Makefile regress/test-exec.sh regress/conch-ciphers.sh]
+     very basic regress test against Twisted Conch in "make interop"
+     target (conch is available in ports/devel/py-twisted/conch);
+     ok markus@
 
 20080629
  - (djm) OpenBSD CVS Sync
@@ -4474,4 +4479,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5036 2008/06/29 22:06:51 djm Exp $
+$Id: ChangeLog,v 1.5037 2008/06/29 22:07:56 djm Exp $
